--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2638,6 +2638,7 @@ input, select, textarea {
 				display: block;
 				min-height: 100%;
 				min-width: 100%;
+				width: 100%;
 				position: absolute;
 			}
 
