--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -485,6 +485,7 @@
 		border: 0;
 		display: inline-block;
 		position: relative;
+		width: 100%;
 
 		&:after {
 			@include vendor('transition', 'opacity 0.25s ease-in-out');
@@ -881,7 +882,7 @@
 				display: block;
 				min-height: 100%;
 				min-width: 100%;
-				position: absolute;
+				width: 100%;
 			}
 		}
 
@@ -917,6 +918,7 @@
 				img {
 					right: 0;
 					top: 0;
+					width: 100%;
 				}
 			}
 
@@ -934,6 +936,7 @@
 				img {
 					left: 0;
 					top: 0;
+					width: 100%;
 				}
 			}
 
